...
          buttonSize: 55,
        };
      case 'profile':
        return {
          iconName: 'person-outline',
          iconColor: colors.primaryDark,
          defaultTestID: 'profile-btn',
          backgroundColor: colors.secondary,
          iconSize: 24,
          buttonSize: 48,
        };
      case 'share':
        return {
...
